--- a/google_colab_files/05_Clustering_tutorial.ipynb
+++ b/google_colab_files/05_Clustering_tutorial.ipynb
@@ -1457,6 +1457,12 @@
         "\n",
         "    return max_diameter_cluster_index\n",
         "\n",
+        "def check_clusters(current_clusters):\n",
+        "  for i in current_clusters:\n",
+        "    if len(i)>2:\n",
+        "      return True\n",
+        "  return False\n",
+        "\n",
         "\n",
         "current_clusters = ([all_elements])\n",
         "level = 1\n",
@@ -1469,18 +1475,20 @@
         "    current_clusters.append(b_clstr)\n",
         "    index = max_diameter(current_clusters)\n",
         "    level +=1\n",
+        "    if(not check_clusters(current_clusters)):\n",
+        "      break\n",
         "\n",
         "\n",
         "print(level, current_clusters)"
       ],
       "metadata": {
         "id": "mKvrRlewldom",
-        "outputId": "e0c48fe6-e37f-4380-d1d3-6a90da585cf1",
+        "outputId": "af059b11-ac7f-4c19-b2b4-6f3aebf77967",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -1488,12 +1496,19 @@
           "text": [
             "1 [[1.0, 2.0, 3.0, 4.0, 5.0]]\n",
             "2 [[3.0, 4.0, 5.0], [1.0, 2.0]]\n",
-            "3 [[1.0, 2.0], [4.0, 5.0], [3.0]]\n",
-            "4 [[1.0, 2.0], [3.0], [5.0], [4.0]]\n",
-            "5 [[3.0], [5.0], [4.0], [2.0], [1.0]]\n"
+            "3 [[1.0, 2.0], [4.0, 5.0], [3.0]]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "46JGYnvJNwrJ"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
