--- a/google_colab_files/04_Classification_of_data.ipynb
+++ b/google_colab_files/04_Classification_of_data.ipynb
@@ -108,7 +108,7 @@
         "import numpy as np\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
-        "# Define the data\n",
+        "# Define the data (age, blood pr, cholesterol, smoke, alcohol consumption, years of work out)\n",
         "X = np.array([[25, 110, 180, 0 , 1 , 9], [35, 130, 190, 1 , 0 , 17], [45, 140, 200, 1, 0, 16],[21, 181, 210, 0, 1, 3],[15, 100, 200, 1, 1, 2]])\n",
         "y = np.array([0, 0, 1, 1, 1]) # Healthy = 0, Diseased = 1\n",
         "\n",
@@ -119,25 +119,28 @@
         "clf.fit(X, y)\n",
         "\n",
         "# Predict the class for a new patient\n",
-        "new_patient = np.array([30, 160, 190, 0, 0, 3]).reshape(1,-1) #add mew patient features\n",
+        "new_patient = np.array([30, 160, 200, 1, 0, 3]).reshape(1,-1) #add mew patient features\n",
         "prediction = clf.predict(new_patient)\n",
+        "most_important = clf.feature_importances_\n",
         "\n",
-        "print(\"Prediction:\", prediction)\n"
+        "print(\"Prediction:\", prediction)\n",
+        "print(most_important)\n"
       ],
       "metadata": {
         "id": "xM7HW376pvIU",
-        "outputId": "84b5ef4d-7afd-4f7f-b564-d9f1e67e50d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "43ca6609-6780-4f60-a88c-1152a870460d"
       },
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prediction: [0]\n"
+            "Prediction: [1]\n",
+            "[0. 0. 1. 0. 0. 0.]\n"
           ]
         }
       ]
